--- a/src/assets/fonts/hackers.scss
+++ b/src/assets/fonts/hackers.scss
@@ -32,6 +32,10 @@
     src: url("fire.ttf") format("truetype");
 }
 @font-face {
-    font-family: roboto;
-    src: url("fire.ttf") format("truetype");
+    font-family: CreamCake;
+    src: url("CreamCake.ttf") format("truetype");
+}
+@font-face {
+    font-family: LinLibertine_R;
+    src: url("LinLibertine_R.ttf") format("truetype");
 }
