--- a/src/app/bsr-mobile/bsr-mobile.component.scss
+++ b/src/app/bsr-mobile/bsr-mobile.component.scss
@@ -74,6 +74,15 @@
         }
     }
 
+    .emoji-icon {
+        outline: none;
+        position: absolute;
+        top: -70px;
+        right: -17px;
+        opacity: 1;
+        animation: flip 0.4s  0.8s ease-in-out 1 forwards;
+    }
+
     @keyframes drop {
         0% {
             top: -200px;
@@ -124,6 +133,10 @@
     .finish-button {
         right: 0px;
         animation: rotateInDownLeft 0.2s ease 0.4s backwards;
+    }
+
+    .enable-anonymous {
+        animation: bounceIn 0.2s ease 0.6s backwards;
     }
 
     .emoji-mobile-box::-webkit-scrollbar {
