cssfor mobile done 2

--- a/src/app/bsr-mobile/bsr-mobile.component.html
+++ b/src/app/bsr-mobile/bsr-mobile.component.html
@@ -8,7 +8,7 @@
                     <div style="font-family: LinLibertine_R;font-size: 25px;padding-right: 10px;">
                         BI Project:
                     </div>
-                    <div> {{projectname}}</div>
+                    <div> {{projectName}}</div>
                 </div>
             </div>
 
