cssfor mobile done 3

--- a/src/app/bsr-mobile/bsr-mobile.component.html
+++ b/src/app/bsr-mobile/bsr-mobile.component.html
@@ -32,7 +32,7 @@
                         <div class="title secondary-text">Welcome to the NamePage<sup style="font-size: 10px;">TM</sup>
                             for Project </div>
                         <div class="title secondary-text" style="color: #004684;">
-                            {{projectname}}
+                            {{projectName}}
                         </div>
                         <div class="mat-small secondary-text">Please enter your information below to continue.
                         </div>
