overview and slide index failing revise tomorrow

--- a/src/app/bsr/bsr.component.scss
+++ b/src/app/bsr/bsr.component.scss
@@ -606,7 +606,7 @@ mat-tab-group ::-webkit-scrollbar {
   max-width: 540px;
   height: 250px;
   border: aliceblue 2px solid;
-  // animation: bounceIn 0.5s ease-in-out 0s 1 forwards;
+  animation: bounceIn 0.5s ease-in-out 0s 1 forwards;
   overflow: hidden;
 }
 .comment-field {
