--- a/src/app/bsr/bsr.component.html
+++ b/src/app/bsr/bsr.component.html
@@ -2,8 +2,8 @@
 
 
   <!-- OVERVIEW SLIDE -->
-  <mat-sidenav mode="over" [opened]="overview" style="width: 300px;">
-    <mat-card (click)="goToSlide(i)" class="" *ngFor="let item of appSlidesData; let i = index">
+  <mat-sidenav class="overview" mode="over" [opened]="overview" >
+    <mat-card (click)="goToSlide(i)" *ngFor="let item of appSlidesData; let i = index">
       <p>{{item.SlideDescription}}</p>
       <img [src]="'http://www.bipresents.com/' + item.SlideBGFileName" alt="overview"
         style="max-width: 250px;cursor: pointer;">
@@ -65,30 +65,21 @@
             <div class="col" *ngIf="isSearching">
               <div class="main-search">
 
-
                 <mat-card  (click)="goToSlide(i)" class="example-card"
                 *ngFor="let item of appSearchSlidesData; let i = index" >
                   <mat-card-header>
                     <div mat-card-avatar class="example-header-image"></div>
-                    <mat-card-title style="    position: absolute;
+                    <p style="    position: absolute;
                     left: 10px;
-                    font-size: 12px;">{{item.SlideDescription}}</mat-card-title>
+                    font-size: 12px;">{{item.SlideDescription}}</p>
                     <!-- <mat-card-subtitle>Dog Breed</mat-card-subtitle> -->
                   </mat-card-header>
                   <img [src]="'http://www.bipresents.com/' + item.SlideBGFileName" alt="overview"
                   style="max-width: 100px;cursor: pointer;">
-                  <mat-card-content>
-                   
-                  </mat-card-content>
+              
                   
                 </mat-card>
 
-                <!-- <mat-card (click)="goToSlide(i)" class="example-card"
-                  *ngFor="let item of appSearchSlidesData; let i = index">
-                 <p style="font-size: 20px;">{{item.SlideDescription}}</p>
-                  <img [src]="'http://www.bipresents.com/' + item.SlideBGFileName" alt="overview"
-                    style="max-width: 50px;cursor: pointer;">
-                </mat-card> -->
                 <br>
                 <hr>
               </div>
@@ -144,7 +135,7 @@
           <div class="row">
 
             <div class="col-md-12">
-              <!-- Brandstomr and Names toolbar -->
+              <!-- Brandstorm and Names toolbar -->
               <mat-toolbar class="toptoolbar mat-elevation-z4" color="primary">
                 <div class="row">
                   <div (click)="theme()" class="col brandstorm"
