--- a/src/app/bsr/bsr.component.html
+++ b/src/app/bsr/bsr.component.html
@@ -49,7 +49,7 @@
 
       <!-- PRESENTATION -->
       <div *ngIf="!createPostIt" fxLayoutAlign="center center" class="col">
-        <div class="slide-box" [style.background]="slideBackground">
+        <div class="slide-box mat-elevation-z12" [style.background]="slideBackground">
 
           <mat-toolbar class="toolbar mat-elevation-z4" *ngIf="mainMenu">
 
