--- a/src/app/bsr/bsr.component.html
+++ b/src/app/bsr/bsr.component.html
@@ -136,7 +136,7 @@
 
             <div class="col-md-12">
               <!-- Brandstorm and Names toolbar -->
-              <mat-toolbar class="toptoolbar mat-elevation-z4" color="primary">
+              <mat-toolbar class="toptoolbar mat-elevation-z12" color="primary">
                 <div class="row">
                   <div (click)="theme()" class="col brandstorm"
                     style="color: white; font-size: 40px;font-family: Arial">
@@ -147,7 +147,7 @@
                     [matTooltip]="'Names Create '+ nameCandidates.length" matTooltipPosition="right">
                     Names <span *ngIf="nameCandidates.length > 0">{{':'+nameCandidates.length}}</span>
                   </div>
-                  <button *ngIf="isScreenButton" (click)="screenNames()" mat-raised-button
+                  <button *ngIf="isScreenButton" (click)="screenNames()" mat-icon-button
                     class="screen-button">screen</button>
                 </div>
               </mat-toolbar>
@@ -176,7 +176,6 @@
                           </mat-card-title>
 
                           <!-- HTML-CONTENT -->
-
                           <mat-card-content class="post-content" (click)="openDialog(item, 'edit')">
                             <div [innerHTML]="item.html"></div>
                           </mat-card-content>
@@ -193,12 +192,12 @@
 
 
                 <!-- SLIDER -->
-                <mat-slider *ngIf="showSlider" [(ngModel)]='sliderVal' [ngStyle]="{'display':slideCss}"
-                  (input)="onInputChange($event)"></mat-slider>
+                <!-- <mat-slider *ngIf="showSlider" [(ngModel)]='sliderVal' [ngStyle]="{'display':slideCss}"
+                  (input)="onInputChange($event)"></mat-slider> -->
                 <div class="col-md-4" *ngIf="nameBox && nameBoxB">
                   <!-- NAMES  nameCandidates BOX -->
                   <!-- <button mat-button class="screen-button">screen</button> -->
-                  <div class="names-container bounceOut" [ngStyle]="{'max-width': myMaxRWith  }">
+                  <div class="names-container bounceOut mat-elevation-z2" [ngStyle]="{'max-width': myMaxRWith  }">
                     <div *ngFor="let  nameCandidate of nameCandidates; let i = index">
                       <span *ngIf="!isScreeningNames" (dblclick)="openDialog(nameCandidate, 'deleteName')"
                         style="font-size:22px;margin: 10px;cursor: pointer;overflow: scroll;"
@@ -228,47 +227,13 @@
                     <p style="position: absolute;
                     top: 60px;">www.mynamepage.com/{{projectId}}</p>
                   </form>
-
-
                 </div>
-                <div *ngIf="true">
+            
 
-                </div>
-
-                <div class="col-md-4 " *ngIf="!nameBox && nameBoxB">
-                  <!-- NAMES BOX -->
-                  <!-- <button mat-button class="screen-button">screen</button> -->
-                  <div class="names-container3 bounceIn">
-                    <div *ngFor="let  item of nameCandidates; let i = index">
-                      <span (dblclick)="openDialog(item, 'deleteName')"
-                        style="font-size:22px;margin: 10px;cursor: pointer;overflow: scroll;" [matTooltip]="item.Source"
-                        matTooltipPosition="right">
-                        {{item.Name}}
-                      </span>
-                    </div>
-
-                    <form name="loginForm" [formGroup]="loginForm" novalidate class="name-form"
-                      fxLayoutAlign="center center">
-
-                      <mat-form-field style="width: 550px;">
-                        <input matInput type="New Name" placeholder="New Name" formControlName="name"
-                          [(ngModel)]="newName">
-                      </mat-form-field>
-                      <button (click)="submitNewName(); newName=''" mat-button color="success" aria-label="icon"
-                        style="outline: none;">
-                        SUBMIT
-                      </button>
-                    </form>
-
-                  </div>
-
-
-                </div>
 
                 <div class="col-md-4 " *ngIf="nameBox && !nameBoxB">
-                  <!-- NAMES BOX -->
-                  <!-- <button mat-button class="screen-button">screen</button> -->
-                  <div class="names-container2 bounceIn">
+                  <!-- NAMES BOX -->                 
+                  <div class="names-container2 bounceIn ">
                     <div *ngFor="let  item of nameCandidates; let i = index">
                       <span (dblclick)="openDialog(item, 'deleteName')"
                         style="font-size:22px;margin: 10px;cursor: pointer;overflow: scroll;" [matTooltip]="item.Source"
@@ -276,10 +241,8 @@
                         {{item.Name}}
                       </span>
                     </div>
-
                     <form name="loginForm" [formGroup]="loginForm" novalidate class="name-form"
                       fxLayoutAlign="center center">
-
                       <mat-form-field style="width: 550px;">
                         <input matInput type="New Name" placeholder="New Name" formControlName="name"
                           [(ngModel)]="newName">
@@ -289,23 +252,17 @@
                         SUBMIT
                       </button>
                     </form>
-
                   </div>
-
-
                 </div>
               </div>
+
               <div class="row">
-
-
                 <!-- SEARCH RESULTS -->
                 <div class="col" *ngIf="isSearching">
-
                   <div class="search-results">
                     <mat-card (click)="goToSlide(i)" class="example-card"
                       *ngFor="let item of appSearchSlidesData; let i = index">
                       <mat-card-header>
-
                         <mat-card-subtitle>{{item.SlideDescription}}</mat-card-subtitle>
                       </mat-card-header>
                       <img [src]="'http://www.bipresents.com/' + item.SlideBGFileName" alt="overview"
@@ -315,8 +272,6 @@
                     <hr>
                   </div>
                 </div>
-
-
 
                 <div class="col-md-12">
                   <!-- MENU -->
