--- a/src/app/bsr/bsr.component.scss
+++ b/src/app/bsr/bsr.component.scss
@@ -173,7 +173,7 @@
   background-color: white;
   width: 300px;
   max-width: 313px;
-  height: 630px;
+  height: 620px;
   position: relative;
   right: 8px;
   top: 134px;
@@ -203,22 +203,7 @@
   display: none;
 }
 
-.names-container3 {
-  background-color: white;
-  width: 0px;
-  max-width: 0px;
-  height: 630px;
-  position: relative;
-  right: 322px;
-  top: 134px;
-  overflow-x: hidden;
-  overflow-y: scroll;
-  padding: 10px;
-}
 
-.names-container3 ::-webkit-scrollbar {
-  display: none;
-}
 
 .post-list {
   width: 100px;
@@ -762,10 +747,11 @@ $postItHeaderColors2: #d6f8fd, #dcd6fd, #d6fde9, #fdfcd6, #d6f8fd, #fdd6e8, #fdd
   display: inline-block;
   margin: 0 0.5rem;
   opacity: 1;
-  transition: opacity 0.5s ease-out;
-  // animation-fill-mode: both;
+  // transition: opacity 0.5s ease-out;
   // animation-direction: alternate;
-  // animation: lightSpeedInRight 1s ; /* referring directly to the animation's @keyframe declaration */
-  // animation-delay: 1s; /* don't forget to set a duration! */
-  // animation-duration: 1s; /* don't forget to set a duration! */
+  animation: pulse ; /* referring directly to the animation's @keyframe declaration */
+  animation-delay: 0.1s; /* don't forget to set a duration! */
+  animation-duration: 0.5s; /* don't forget to set a duration! */
+  animation-iteration-count: 2;
+  animation-fill-mode: forwards;
 }
