dragabble concepts and page counter bug fixed

--- a/src/app/bsr/bsr.component.html
+++ b/src/app/bsr/bsr.component.html
@@ -165,7 +165,13 @@
                       [cdkDropListData]="conceptData.concepts" (cdkDropListDropped)="drop($event)">
 
                       <div [ngClass]="postItListTheme" *ngFor="let item of conceptData.concepts; let i = index;">
-                        <mat-card class="mat-elevation-z4 post-card" cdkDrag cdkDragLockAxis="xy">
+                        <mat-card class="mat-elevation-z4 post-card" cdkDrag cdkDragLockAxis="yx">
+                          <div class="emoji-handle" cdkDragHandle>
+                            <!-- <svg width="24px" fill="currentColor" viewBox="0 0 24 24">
+                              <path d="M10 9h4V6h3l-5-5-5 5h3v3zm-1 1H6V7l-5 5 5 5v-3h3v-4zm14 2l-5-5v3h-3v4h3v3l5-5zm-9 3h-4v3H7l5 5 5-5h-3v-3z"></path>
+                              <path d="M0 0h24v24H0z" fill="none"></path>
+                            </svg> -->
+                          </div>
 
                           <!-- TITLE -->
                           <mat-card-title>
@@ -176,7 +182,7 @@
                           </mat-card-title>
 
                           <!-- HTML-CONTENT -->
-                          <mat-card-content class="post-content" (click)="openDialog(item, 'edit')">
+                          <mat-card-content class="post-content" (dblclick)="openDialog(item, 'edit')">
                             <div [innerHTML]="item.html"></div>
                           </mat-card-content>
 
