--- a/src/app/bsr/editPost-it.html
+++ b/src/app/bsr/editPost-it.html
@@ -1,21 +1,9 @@
 <div style="position: relative;overflow: hidden;" fxLayoutAlign="center center">
     <!-- <div style="position: relative;overflow: hidden;background-image: url(toolbarBg.jpg);background-repeat: no-repeat;"
     fxLayoutAlign="center center"> -->
-<style>
-    .example-handle {
-        position: absolute;
-    top: 8px;
-    right: 51px;
-    color: #000;
-    cursor: move;
-    width: 664px;
-    height: 24px;
-    z-index: 999999;
-    }</style>
-
     <!-- EMOJIS -->
     <div *ngIf="isEmojiTime" class="emoji-box mat-elevation-z8" cdkDrag>
-        <div class="example-handle" cdkDragHandle>
+        <div class="emoji-handle" cdkDragHandle>
             <!-- <svg width="24px" fill="currentColor" viewBox="0 0 24 24">
               <path d="M10 9h4V6h3l-5-5-5 5h3v3zm-1 1H6V7l-5 5 5 5v-3h3v-4zm14 2l-5-5v3h-3v4h3v3l5-5zm-9 3h-4v3H7l5 5 5-5h-3v-3z"></path>
               <path d="M0 0h24v24H0z" fill="none"></path>
